ncc/testsuite/negative/expected-value.n
class H { private this () { } }

class M {
  fld : int;
  meth () : void {}
  static f () : void { def x = 1; x = H }    // E: type `H' has no accessible constructors
  static g () : void { def x = 1; x = M.fld }    // E: unbound member `fld' in type `M'
  static h () : void { def x = 1; x = M.meth }    // E: unbound member `meth' in type `M'
}
